reduce font-size

--- a/css/spf-ui.css
+++ b/css/spf-ui.css
@@ -117,6 +117,7 @@
   color: #666;
   font-family: ProximaNovaLight, 'Helvetica Neue', Helvetica, Arial, sans-serif;
   font-weight: 400;
+  font-size: 0.75em
   margin-top: -1px;
   margin-left: -1px;
   border: 1px solid transparent;
